Adding ThreadChecker statement to d'tor for remoting/base classes

BUG=715633

Review-Url: https://codereview.chromium.org/2871143003
Cr-Commit-Position: refs/heads/master@{#470732}

Former-commit-id: 6daaab3e7632ca92af16b8614f5783ae7fafd764